allprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'eclipse'
    //apply plugin: 'project-report'

    sourceCompatibility = 1.8

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
    }

    repositories {
        mavenCentral()
    }
}

group 'net.meku.cylone'
//version '1.0.0-SNAPSHOT'
version '1.0.0'

